# Final-Project-Report

./: LICENSE  README.md
Code/APDS Functionality/: i2c_bus_scan.c
Code/Combined Functionality/: pico_pio_pwm.c  pio_combined.c  pio_combined.pio  pio_combined.uf2
Code/Combined V2.0/: pico_pio_pwm.pio  pio_combined.c  pio_combined.uf2
Code/Combined_V3.0/: CMakeLists.txt  i2c_bus_scan.c  pio_combined.c  pio_combined.uf2
Code/Servo motor functionality/: CMakeLists.txt
Data Used/: 519proj.xlsx  noindicator.txt  withindicator.txt
